--- a/source/_includes/custom/asides/pages.html
+++ b/source/_includes/custom/asides/pages.html
@@ -1,7 +1,7 @@
 <section>
   <h1>Pages</h1>
   <ul>
-    <li><a href="http://photos.dhar.fr/">My Open Photo</a></li>
+    <li><a href="http://photos.dhar.fr/" rel="nofollow">My Open Photo</a></li>
     <li><a href="{{ root_url }}/prettyprint-bookmarklet/">Prettify Bookmarklet</a></li>
   </ul>
 </section>
