Added grunt-wkhtmltopdf to 'side' projects

--- a/source/_includes/custom/asides/pages.html
+++ b/source/_includes/custom/asides/pages.html
@@ -1,7 +1,8 @@
 <section>
   <h1>Pages</h1>
   <ul>
-    <li><a href="http://photos.dhar.fr/" rel="nofollow">My Open Photo</a></li>
     <li><a href="{{ root_url }}/prettyprint-bookmarklet/">Prettify Bookmarklet</a></li>
+    <li><a href="{{ root_url }}/grunt-wkhtmltopdf/">Grunt plugin - wkhtmltopdf</a></li>
+    <li><a href="http://photos.dhar.fr/" rel="nofollow">My Open Photo</a></li>
   </ul>
 </section>
