--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -1,2 +1,7 @@
 // This File is imported last, and will override other styles in the cascade
 // Add styles here to make changes without digging in too much
+.aboutme {
+  line-height: 1.2em;
+  color: rgb(153, 153, 153);
+  margin-top: 10px;
+}
