--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -1,11 +1,12 @@
 @import "compass";
-@include global-reset;
-@include reset-html5;
 
 @import "custom/colors";
+@import "base";
+@import "parts";
+@import "plugins";
+
+@import "greyshade";
+
 @import "custom/fonts";
 @import "custom/layout";
-@import "base";
-@import "partials";
-@import "plugins/**/*";
 @import "custom/styles";
